--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Lab10P2_FernandoPadilla
-main.class=lab10p2_fernandopadilla.Lab10P2_FernandoPadilla
+main.class=lab10p2_fernandopadilla.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
